# evaluation-engine

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  skills-lock.json
public/: index.html
services/: datalab.py  evaluator.py  storage.py
